--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <img src="pict/1.png" alt="Жирафa" style="max-width:210px ;"> 
   <h2 style="margin:1px";>Н Е З А Б У В А Й К А</h2> <br>
   <input type="text" id="myInput" placeholder=". . .">
-  <span onclick="newElement()" class="addBtn">Добавити</span>
+  <span onclick="newElement()" class="addBtn">+</span>
 </div>
 
 <ul id="myUL">
